--- a/documentation/docs/introduction/example.mdx
+++ b/documentation/docs/introduction/example.mdx
@@ -21,7 +21,7 @@ npm i @nestjs-query/core
 ```
 ```sh
 npm i @nestjs-query/query-graphql @nestjs/common @nestjs/graphql graphql graphql-relay class-transformer class-validator reflect-metadata type-graphql
-``` 
+```
 ```sh
 npm i @nestjs-query/query-typeorm @nestjs/common @nestjs/typeorm class-transformer typeorm
 ```
@@ -81,13 +81,13 @@ export class TodoItemEntity {
 
 ## Create the DTO
 
-The DTO (Data Transfer Object) is used by the resolver to represent incoming requests and outgoing responses. 
+The DTO (Data Transfer Object) is used by the resolver to represent incoming requests and outgoing responses.
 
-The DTO is where you can: 
+The DTO is where you can:
 
 * Define fields that should be rendered by graphql.
 * Define fields that should be filterable using the `@FilterableField` decorator.
-* Define validation that will be used by mutations. 
+* Define validation that will be used by mutations.
 
 In this example the DTO and entity are two different classes to clearly demonstrate what is required for `graphql` vs
 `typeorm`. However, you can combine the two into a single class.
@@ -128,12 +128,11 @@ corresponding field. If you just use `@Field` then you will not be able to filte
 
 ## Create the Service
 
-The service in this example is extending the `@nestjs-query/query-typeorm` `TypeormQueryService`. 
+The service in this example is extending the `@nestjs-query/query-typeorm` `TypeormQueryService`.
 
 The `TypeormQueryService` will provide implementations for:
 
 * `query` - find multiple records.
-* `queryOne` - find one record.
 * `findById` - find a record by its id.
 * `getById` - get a record by its id or return a rejected promise with a NotFound error.
 * `createMany` - create multiple records.
@@ -585,7 +584,7 @@ mutation {
 
 ```graphql
 {
-  todoItem(filter: { id: { eq: 1 } }) {
+  todoItem(id: 1) {
     id
     title
     completed
