--- a/documentation/docs/graphql/resolvers.mdx
+++ b/documentation/docs/graphql/resolvers.mdx
@@ -62,6 +62,10 @@ The Crud Resolver accepts a number of options to control your endpoints.
 * `read` - In addition to [`ResolverOptions`](#resolveroptions) you can also specify the following
     * `QueryArgs` - The `ArgsType` to use to filter records in `queryMany` endpoint.
     * `Connection` - The `ObjectType` to return from the `queryMany` endpoint.
+    * `defaultResultSize=10` - The default number of results to return
+    * `maxResultsSize=50` - The maximum number of results an end user can specify to return from a query.
+    * `defaultSort=[]` - The default sort to use when querying for records.
+    * `defaultFilter={}` - The default filter to use when querying for records.
 
 * `update` - In addition to [`ResolverOptions`](#resolveroptions) you can also specify the following
     * `UpdateDTOClass` - The input DTO to use for update mutations.
@@ -284,6 +288,79 @@ export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
 }
 ```
 ---
+
+### Default Filter
+
+When querying the default filter is empty. You can specify a default filter by using the `read.defaultFilter` option.
+
+In this example we specify the default filter to be `completed IS TRUE`.
+
+```ts
+import { CRUDResolver } from '@nestjs-query/query-graphql';
+import { Resolver } from '@nestjs/graphql';
+import { TodoItemDTO } from './dto/todo-item.dto';
+import { TodoItemService } from './todo-item.service';
+
+@Resolver()
+export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
+  read: { defaultFilter: { completed: { is: true } } },
+}) {
+  constructor(readonly service: TodoItemService) {
+    super(service);
+  }
+}
+```
+---
+
+### Default Paging
+
+By default all results will be limited to 10 records, with a max of 50 records returned.
+
+To override the default you can override the following options:
+
+* `read.defaultResultSize` - The default number of results to return.
+* `read.maxResultSize` - The maximum number of results an end user can specify to return.
+
+In this example we specify the `defaultResultSize` to 5 and `maxResultsSize` to 20.
+
+```ts
+import { CRUDResolver } from '@nestjs-query/query-graphql';
+import { Resolver } from '@nestjs/graphql';
+import { TodoItemDTO } from './dto/todo-item.dto';
+import { TodoItemService } from './todo-item.service';
+
+@Resolver()
+export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
+  read: { defaultResultSize: 5, maxResultsSize: 20 },
+}) {
+  constructor(readonly service: TodoItemService) {
+    super(service);
+  }
+}
+```
+---
+
+### Default Sort
+
+When querying the default sort is based on the persistence layer. You can override the default by providing the `defaultSort` option.
+
+In this example we specify the default sort to be by `title`.
+
+```ts
+import { CRUDResolver } from '@nestjs-query/query-graphql';
+import { Resolver } from '@nestjs/graphql';
+import { TodoItemDTO } from './dto/todo-item.dto';
+import { TodoItemService } from './todo-item.service';
+
+@Resolver()
+export class TodoItemResolver extends CRUDResolver(TodoItemDTO, {
+  read: { defaultSort: [{ field: 'title', direction: SortDirection.ASC }] },
+}) {
+  constructor(readonly service: TodoItemService) {
+    super(service);
+  }
+}
+```
 
 ## Individual Resolvers
 
