--- a/documentation/docs/graphql/resolvers.mdx
+++ b/documentation/docs/graphql/resolvers.mdx
@@ -76,6 +76,8 @@ The Crud Resolver accepts a number of options to control your endpoints.
     * `CreateOneArgs` - The `ArgsType` to use for delete one mutations.
     * `CreateManyArgs` - The `ArgsType` to use for delete many mutations.
 
+* `relations` - See the [relations docs](./relations).
+
 #### `ResolverOptions`
 
 The `create`, `read`, `update`, and `delete` options above all accept the following options.
