--- a/documentation/blog/2020-02-05-v0.1.0.md
+++ b/documentation/blog/2020-02-05-v0.1.0.md
@@ -5,7 +5,7 @@ author: Doug Martin
 author_title: Creator
 author_url: https://github.com/doug-martin
 author_image_url: https://avatars1.githubusercontent.com/u/361261?v=4
-tags: [releases, patch]
+tags: [releases, minor]
 ---
 
 As of `v0.1.0` you can specify relations in your graphql resolvers.
