--- a/documentation/blog/2020-02-05-v0.1.0.md
+++ b/documentation/blog/2020-02-05-v0.1.0.md
@@ -10,7 +10,7 @@ tags: [releases, minor]
 
 As of `v0.1.0` you can specify relations in your graphql resolvers.
 
-[Checkout the docs!](docs/graphql/relations) 
+[Checkout the docs!](../docs/graphql/relations) 
 
 
 
