--- a/documentation/blog/2020-02-12-v0.2.0.md
+++ b/documentation/blog/2020-02-12-v0.2.0.md
@@ -10,7 +10,7 @@ tags: [releases, minor]
 
 In `v0.2.0` the concept of `Assemblers` was introduced. `Assemblers` allow for converting to and from a DTO/entity that have different fields or computed values.
 
-[Read More About Assemblers!](docs/concepts/assemblers) 
+[Read More About Assemblers!](../docs/concepts/assemblers) 
 
 
 
